--- a/Game Code/SFML Template/SFML Template/SFML Template.vcxproj
+++ b/Game Code/SFML Template/SFML Template/SFML Template.vcxproj
@@ -150,6 +150,9 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="defs.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
