--- a/Game Code/SFML Template/SFML Template/SFML Template.vcxproj
+++ b/Game Code/SFML Template/SFML Template/SFML Template.vcxproj
@@ -148,10 +148,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="EventHandler.cpp" />
+    <ClCompile Include="GameLoop.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MainWindow.cpp" />
+    <ClCompile Include="TextureManager.cpp" />
+    <ClCompile Include="UserInterface.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Button.h" />
     <ClInclude Include="defs.h" />
+    <ClInclude Include="EventHandler.h" />
+    <ClInclude Include="GameLoop.h" />
+    <ClInclude Include="MainWindow.h" />
+    <ClInclude Include="TextureManager.h" />
+    <ClInclude Include="UserInterface.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
