More UI Elements
I have made some fixes to the UI, the next step is to figgure out why I am unable to pass an sf::Font into the Button Template.

--- a/Game Code/SFML Template/SFML Template/SFML Template.vcxproj.filters
+++ b/Game Code/SFML Template/SFML Template/SFML Template.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="TextureManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FontManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="defs.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Button.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FontManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
