--- a/Game Code/SFML Template/SFML Template/SFML Template.vcxproj
+++ b/Game Code/SFML Template/SFML Template/SFML Template.vcxproj
@@ -149,6 +149,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="EventHandler.cpp" />
+    <ClCompile Include="FontManager.cpp" />
     <ClCompile Include="GameLoop.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MainWindow.cpp" />
@@ -159,6 +160,7 @@
     <ClInclude Include="Button.h" />
     <ClInclude Include="defs.h" />
     <ClInclude Include="EventHandler.h" />
+    <ClInclude Include="FontManager.h" />
     <ClInclude Include="GameLoop.h" />
     <ClInclude Include="MainWindow.h" />
     <ClInclude Include="TextureManager.h" />
