--- a/Game Code/SFML Template/SFML Template/SFML Template.vcxproj
+++ b/Game Code/SFML Template/SFML Template/SFML Template.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="GameLoop.h" />
     <ClInclude Include="MainWindow.h" />
     <ClInclude Include="TextureManager.h" />
+    <ClInclude Include="ToggleButton.h" />
     <ClInclude Include="UserInterface.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
