--- a/Game Code/SFML Template/SFML Template/SFML Template.vcxproj.filters
+++ b/Game Code/SFML Template/SFML Template/SFML Template.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClInclude Include="Button.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ToggleButton.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
