--- a/Game Code/Cut_The_Rope/SFML Template/SFML Template.vcxproj
+++ b/Game Code/Cut_The_Rope/SFML Template/SFML Template.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="GameLoop.cpp" />
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MouseTool.cpp" />
     <ClCompile Include="PhysicsObject.cpp" />
     <ClCompile Include="Platform.cpp" />
     <ClCompile Include="Rope.cpp" />
@@ -167,6 +168,7 @@
     <ClInclude Include="EventHandler.h" />
     <ClInclude Include="GameLoop.h" />
     <ClInclude Include="Level.h" />
+    <ClInclude Include="MouseTool.h" />
     <ClInclude Include="PhysicsObject.h" />
     <ClInclude Include="Platform.h" />
     <ClInclude Include="Rope.h" />
