--- a/Game Code/Cut_The_Rope/SFML Template/SFML Template.vcxproj.filters
+++ b/Game Code/Cut_The_Rope/SFML Template/SFML Template.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Platform.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MouseTool.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Window.h">
@@ -69,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Platform.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MouseTool.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
