--- a/Game Code/Cut_The_Rope/SFML Template/SFML Template.vcxproj.filters
+++ b/Game Code/Cut_The_Rope/SFML Template/SFML Template.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="MouseTool.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EndPoint.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Window.h">
@@ -75,6 +78,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MouseTool.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EndPoint.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
