--- a/Game Code/Cut_The_Rope/SFML Template/SFML Template.vcxproj.filters
+++ b/Game Code/Cut_The_Rope/SFML Template/SFML Template.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="EndPoint.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ContactListner.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Window.h">
@@ -81,6 +84,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="EndPoint.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ContactListner.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
