--- a/Game Code/Cut_The_Rope/SFML Template/SFML Template.vcxproj.filters
+++ b/Game Code/Cut_The_Rope/SFML Template/SFML Template.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="ContactListner.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TextureLoader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Window.h">
@@ -87,6 +90,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ContactListner.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TextureLoader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
