--- a/Game Code/Cut_The_Rope/SFML Template/SFML Template.vcxproj
+++ b/Game Code/Cut_The_Rope/SFML Template/SFML Template.vcxproj
@@ -152,6 +152,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Ball.cpp" />
+    <ClCompile Include="Button.cpp" />
     <ClCompile Include="ContactListner.cpp" />
     <ClCompile Include="EndPoint.cpp" />
     <ClCompile Include="EventHandler.cpp" />
@@ -163,10 +164,12 @@
     <ClCompile Include="Platform.cpp" />
     <ClCompile Include="Rope.cpp" />
     <ClCompile Include="TextureLoader.cpp" />
+    <ClCompile Include="UserInterface.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ball.h" />
+    <ClInclude Include="Button.h" />
     <ClInclude Include="ContactListner.h" />
     <ClInclude Include="defs.h" />
     <ClInclude Include="EndPoint.h" />
@@ -178,6 +181,7 @@
     <ClInclude Include="Platform.h" />
     <ClInclude Include="Rope.h" />
     <ClInclude Include="TextureLoader.h" />
+    <ClInclude Include="UserInterface.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
